kuber/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  replicas: 1
  template:
    metadata:
      name: mongo
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:5.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
      restartPolicy: Always
  selector:
    matchLabels:
      app: mongo
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
  type: ClusterIP
